curriki-tsugi/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o openshift/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: curriki-tsugi-web
    app.kubernetes.io/component: curriki-tsugi-web
    app.kubernetes.io/instance: curriki-tsugi-web
    app.kubernetes.io/part-of: curriki
  name: curriki-tsugi-web
spec:
  ports:
  - name: 9999-tcp
    port: 9999
    targetPort: 9999
  selector:
    io.kompose.service: curriki-tsugi-web
